--- a/app/templates/components/video_row.html
+++ b/app/templates/components/video_row.html
@@ -2,8 +2,7 @@
     <td class="ps-4"><input type="checkbox" class="form-check-input" name="video_ids" value="{{ video.id }}" {% if
             video.status=='downloaded' %}disabled{% endif %}></td>
     <td>
-        <a href="{{ video.url }}" target="_blank" class="text-decoration-none text-dark text-truncate d-block"
-            style="max-width: 500px;">
+        <a href="{{ video.url }}" target="_blank" class="text-decoration-none text-dark video-title">
             {{ video.title }}
         </a>
     </td>
@@ -16,7 +15,7 @@
             {{ video.status|capitalize }}
         </span>
     </td>
-    <td class="text-end pe-4">
+    <td class="text-end pe-4 text-nowrap">
         {% if video.status == 'new' %}
         <button id="btn-download-{{ video.id }}" class="btn btn-sm btn-outline-success"
             hx-post="/download/{{ video.id }}" hx-swap="outerHTML" title="Download">
