--- a/app/templates/performer.html
+++ b/app/templates/performer.html
@@ -127,6 +127,7 @@
         /* Default for mobile */
         display: -webkit-box;
         -webkit-line-clamp: 2;
+        line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
     }
